feat: mark project vpc id nullable
